# KHORD_v.1.0.0

./: README.md
Case/: KHORD_Case v1.stl
Hardware/: KHORD.kicad_pcb  KHORD.kicad_sch  fp-lib-table  sym-lib-table
Hardware/libs/_footprints.pretty/: Diode_DO-35.kicad_mod  ESP32-S3-DEVKITC-1-N8R8.kicad_mod  ESP32-S3-DEVKITC-1-N8R8_largePad.kicad_mod  MX_PCB_1.00u.kicad_mod  MX_PCB_2.00u.kicad_mod  STAB_MX_2u.kicad_mod
Hardware/libs/_logo.preety/: logo_30.kicad_mod  logo_40.kicad_mod
Software/: CMakeLists.txt  sdkconfig
Software/main/: CMakeLists.txt  config.h  debounce.c  debounce.h  idf_component.yml  keyboard.c  keyboard.h  keymap.c  keymap.h  main.c  matrix.c  matrix.h  timer.c  timer.h  usb.c  usb.h
